Use cgroups to limit java heap size